chore: Refactor code for adding a product

--- a/web/views/Products/modifyproduct.html
+++ b/web/views/Products/modifyproduct.html
@@ -144,7 +144,7 @@
                     </div>
                 </div>
                 <div class="button-container">
-                    <button class="submit-btn" type="button" onclick="submitProduct()">ADD</button>
+                    <button class="submit-btn" type="button" >MODIFY</button>
                 </div>
             </div>
         </main>
@@ -249,7 +249,7 @@
         </div>
         
 
-    <script src="./assets/scripts/orders.js"></script>
+    <script src="../../assets/scripts/modifyproduct.js"></script>
     <script src="../../assets/scripts/add_product.js"></script>
 </body>
 
