--- a/web/views/Products/products.html
+++ b/web/views/Products/products.html
@@ -122,59 +122,18 @@
                     <table>
                         <thead>
                             <tr>
+                                <!-- Add this line for the product ID -->
                                 <th>Product Name</th>
+                                <th>Category</th>
                                 <th>Price</th>
-                                <th>status</th>
-                                <th>Action</th>
+                                <th>Description</th>
+                                <th>Active</th>
+                                <th>Actions</th>
                             </tr>
                         </thead>
-                        <tbody>
-                            <tr>
-                                <td>donna</td>
-                               
-                                <td>10</td>
-                                
-                                <td>7025556960</td>
-                                <td class="actions">
-                                    <button class="edit-btn"><i class="fas fa-edit"></i></button>
-                                    <button class="delete-btn"><i class="fas fa-trash-alt"></i></button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>donna</td>
-                               
-                                <td>10</td>
-                                
-                                <td>7025556960</td>
-                                <td class="actions">
-                                    <button class="edit-btn"><i class="fas fa-edit"></i></button>
-                                    <button class="delete-btn"><i class="fas fa-trash-alt"></i></button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>donna</td>
-                               
-                                <td>10</td>
-                                
-                                <td>7025556960</td>
-                                <td class="actions">
-                                    <button class="edit-btn"><i class="fas fa-edit"></i></button>
-                                    <button class="delete-btn"><i class="fas fa-trash-alt"></i></button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>donna</td>
-                               
-                                <td>10</td>
-                                
-                                <td>7025556960</td>
-                                <td class="actions">
-                                    <button class="edit-btn"><i class="fas fa-edit"></i></button>
-                                    <button class="delete-btn"><i class="fas fa-trash-alt"></i></button>
-                                </td>
-                            </tr>
-                        </tbody>
+                        <tbody></tbody>
                     </table>
+                    
                     <div class="pagination-container">
                         Showing 1 of 1 entries
                         <ul class="pagination">
@@ -287,7 +246,7 @@
         </div>
         
 
-    <script src="./assest/scripts/index.js"></script>
+    <script src="../../assets/scripts/products.js"></script>
 </body>
 
 </html>
