--- a/web/assets/styles/add_style.css
+++ b/web/assets/styles/add_style.css
@@ -82,3 +82,17 @@
 .submit-btn:hover {
   background-color: #0056b3;
 }
+.mod-btn {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  text-align: center;
+}
+
+.mod-btn:hover {
+  background-color: #0056b3;
+}
