Refactor code for modifying a product

--- a/web/views/Products/modifyproduct.html
+++ b/web/views/Products/modifyproduct.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../assets/styles/mang_style.css">
     <link rel="stylesheet" href="../../assets/styles/style.css">
     <script type="text/javascript" src="/eel.js"></script>
+    <script src="../../assets/scripts/modifyproduct.js" defer></script>
 
     <title>RMS</title>
 </head>
@@ -109,7 +110,6 @@
         <main>
             <div class="form-container">
                 <div class="form-left">
-                    
                     <div class="form-group">
                         <label for="product-name">Product Name</label>
                         <input type="text" id="product-name" name="product-name" placeholder="Product Name">
@@ -127,10 +127,10 @@
                     <div class="form-group">
                         <label for="category">Category</label>
                         <select id="category" name="category">
-                            <option value="appetizer">Appetizer</option>
-                            <option value="main-course">Main Course</option>
-                            <option value="dessert">Dessert</option>
-                            <option value="beverage">Beverage</option>
+                            <option value="1">Appetizer</option>
+                            <option value="2">Main Course</option>
+                            <option value="3">Dessert</option>
+                            <option value="4">Beverage</option>
                         </select>
                     </div>
                     <div class="form-group">
@@ -144,7 +144,7 @@
                     </div>
                 </div>
                 <div class="button-container">
-                    <button class="submit-btn" type="button" >MODIFY</button>
+                    <button class="submit-btn" type="button">MODIFY</button>
                 </div>
             </div>
         </main>
@@ -249,8 +249,7 @@
         </div>
         
 
-    <script src="../../assets/scripts/modifyproduct.js"></script>
-    <script src="../../assets/scripts/add_product.js"></script>
+        <script src="../../assets/scripts/modifyproduct.js" ></script>
 </body>
 
 </html>
