feat: Add quantity field to product form and database schema

--- a/web/views/Products/products.html
+++ b/web/views/Products/products.html
@@ -128,7 +128,9 @@
                                 <th>Price</th>
                                 <th>Description</th>
                                 <th>Active</th>
+                                <th>Quantity</th>
                                 <th>Actions</th>
+                                
                             </tr>
                         </thead>
                         <tbody></tbody>
