--- a/web/views/Products/addproduct.html
+++ b/web/views/Products/addproduct.html
@@ -109,7 +109,6 @@
         <main>
             <div class="form-container">
                 <div class="form-left">
-                    
                     <div class="form-group">
                         <label for="product-name">Product Name</label>
                         <input type="text" id="product-name" name="product-name" placeholder="Product Name">
@@ -142,11 +141,15 @@
                             <label for="active-no">No</label>
                         </div>
                     </div>
+                    <div class="form-group">
+                        <label for="quantity">Quantity</label>
+                        <input type="number" id="quantity" name="quantity" placeholder="Quantity" step="1">
+                    </div>
                 </div>
                 <div class="button-container">
                     <button class="submit-btn" type="button" onclick="submitProduct()">ADD</button>
                 </div>
-            </div>
+            </div>            
         </main>
         
         <!-- End of Main Content -->
