--- a/web/views/Products/modifyproduct.html
+++ b/web/views/Products/modifyproduct.html
@@ -142,6 +142,10 @@
                             <label for="active-no">No</label>
                         </div>
                     </div>
+                    <div class="form-group">
+                        <label for="quantity">Quantity</label>
+                        <input type="number" id="quantity" name="quantity" placeholder="Quantity" step="1">
+                    </div>
                 </div>
                 <div class="button-container">
                     <button class="submit-btn" type="button">MODIFY</button>
