--- a/web/views/Users/adduser.html
+++ b/web/views/Users/adduser.html
@@ -138,6 +138,8 @@
                             <label for="female">Female</label>
                         </div>
                     </div>
+                    
+                   
                 </div>
                 <div class="form-right">
                     <div class="form-group">
@@ -152,10 +154,20 @@
                         <label for="bio">Bio</label>
                         <textarea id="bio" name="bio" placeholder="Bio"></textarea>
                     </div>
+                    <div class="container">
+                        <div class="form-group">
+                            <label for="role">Group</label>
+                            <select id="role" name="role" class="form-control">
+                                <!-- Options will be dynamically added here -->
+                            </select>
+                        </div>
+                    </div>
                 </div>
-                <div class="button-container">
-                    <button class="submit-btn" onclick="submitUser()">ADD</button>
-                </div>
+                
+                
+            </div>
+            <div class="button-container">
+                <button class="submit-btn" onclick="submitUser()">ADD</button>
             </div>
         </main>
         <!-- End of Main Content -->
