--- a/web/views/Settings/settings.html
+++ b/web/views/Settings/settings.html
@@ -27,7 +27,7 @@
             </div>
 
             <div class="sidebar">
-                <a href="../Dashboard/index.html" >
+                <a href="../Dashboard/index.html">
                     <span class="material-icons-sharp">
                         dashboard
                     </span>
@@ -39,11 +39,15 @@
                     </span>
                     <h3>Users</h3>
                 </a>
-                <a href="../users/adduser.html" >
+                <a href="../users/adduser.html">
                     <span class="material-icons-sharp">
                         add
                     </span>
                     <h3>New Users</h3>
+                </a>
+                <a href="../groups/group.html" class="active">
+                    <span class="material-icons-sharp">group</span>
+                    <h3>Groups</h3>
                 </a>
                 <a href="../Tables/tables.html">
                     <span class="material-icons-sharp">
@@ -51,19 +55,19 @@
                     </span>
                     <h3>Tables</h3>
                 </a>
-                <a href="../categorys/category.html">
+                <a href="../categorys/category.html" class="active">
                     <span class="material-icons-sharp">
                         category
                     </span>
                     <h3>Category</h3>
                 </a>
-                <a href="../products/products.html" >
+                <a href="../products/products.html">
                     <span class="material-icons-sharp">
                         inventory_2
                     </span>
                     <h3>Products</h3>
                 </a>
-                <a href="../products/addproduct.html" >
+                <a href="../products/addproduct.html">
                     <span class="material-icons-sharp">
                         add
                     </span>
@@ -88,13 +92,13 @@
                     </span>
                     <h3>Reports</h3>
                 </a>
-                <a href="../Settings/settings.html"  class="active">
+                <a href="../Settings/settings.html">
                     <span class="material-icons-sharp">
                         settings
                     </span>
                     <h3>Settings</h3>
                 </a>
-                
+
                 <a href="../../login.html">
                     <span class="material-icons-sharp">
                         logout
