--- a/web/views/groups/group.html
+++ b/web/views/groups/group.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../assets/styles/mang_style.css">
     <link rel="stylesheet" href="../../assets/styles/style.css">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script type="text/javascript" src="/eel.js"></script>
 
     <title>RMS</title>
@@ -20,7 +20,7 @@
         <!-- Sidebar Section -->
         <aside>
             <div class="toggle">
-                <h1>Report</h2>
+                <h1>Category</h1>
                 <div class="close" id="close-btn">
                     <span class="material-icons-sharp">
                         close
@@ -112,88 +112,52 @@
         <!-- End of Sidebar Section -->
 
         <!-- Main Content -->
+        
         <main>
-            
-            <!-- Analyses -->
             <div class="form-container">
                 <div class="manage-users-container">
-                    
-                    <div class="chart-container">
-                        <canvas id="ordersChart"></canvas>
+                    <div class="form-group">
+                        Show
+                        <select id="category-count">
+                            <option value="4">4</option>
+                            <!-- More options can be added here -->
+                        </select>
                     </div>
                     <table>
                         <thead>
-                        <tr>
-                            <th>Month - Year</th>
-                            <th>Amount</th>
-                        </tr>
-                        </thead>
-                        <tbody>
                             <tr>
-                            <td>2021-01</td>
-                            <td>$0</td>
-                        </tr>
-                        <tr>
-                            <td>2021-02</td>
-                            <td>$0</td>
-                        </tr>
-                        <tr>
-                            <td>2021-03</td>
-                            <td>$0</td>
-                        </tr>
-                        <tr>
-                            <td>2021-04</td>
-                            <td>$0</td>
-                        </tr>
-                        <tr>
-                            <td>2021-05</td>
-                            <td>$182.31</td>
-                        </tr>
-                        <tr>
-                            <td>2021-06</td>
-                            <td>$0</td>
-                        </tr>
-                        <tr>
-                            <td>2021-07</td>
-                            <td>$0</td>
-                        </tr>
-                        <tr>
-                            <td>2021-08</td>
-                            <td>$19.36</td>
-                        </tr>
-                        <tr>
-                            <td>2021-09</td>
-                            <td>$0</td>
-                        </tr>
-                        <tr>
-                            <td>2021-10</td>
-                            <td>$0</td>
-                        </tr>
-                        <tr>
-                            <td>2021-11</td>
-                            <td>$0</td>
-                        </tr>
-                        <tr>
-                            <td>2021-12</td>
-                            <td>$0</td>
-                        </tr>
+                                <th>Group Name</th>
+                                <th>Action</th>
+                            </tr>
+                        </thead>
+                        <tbody id="group-data">
+                            <!-- Group data will be inserted here -->
                         </tbody>
-                        <tfoot>
-                        <tr>
-                            <th>Total Amount</th>
-                            <th>$201.67</th>
-                        </tr>
-                    </tfoot>
                     </table>
-                
-            
-                    
+                    <div class="form-container">
+                        <div class="form-left">
+                            <div class="form-group">
+                                <label for="group-name">Group Name</label>
+                                <input type="text" id="group-name" name="group-name">
+                            </div>
+                        </div>
+                        <div class="button-container">
+                            <button class="submit-btn" id="submit-group-btn" onclick="submitGroup()">ADD</button>
+                        </div>
+                    </div>
+                    <div class="pagination-container">
+                        Showing 1 of 1 entries
+                        <ul class="pagination">
+                            <li><a href="#">Previous</a></li>
+                            <li><a href="#">1</a></li>
+                            <li><a href="#">Next</a></li>
+                        </ul>
+                    </div>
                 </div>
-            </div> 
-            
+            </div>
         </main>
         <!-- End of Main Content -->
-        
+
         <!-- Right Section -->
         <div class="right-section">
             <div class="nav">
@@ -210,7 +174,7 @@
                         dark_mode
                     </span>
                 </div>
-        
+
                 <div class="profile">
                     <div class="info">
                         <p>Hey, <b>Kassimi</b></p>
@@ -220,10 +184,10 @@
                         <img src="../../images/profile-1.jpg" alt="Admin profile picture">
                     </div>
                 </div>
-        
+
             </div>
             <!-- End of Nav -->
-        
+
             <div class="user-profile">
                 <div class="logo">
                     <img src="../../images/logo.png" alt="Company logo">
@@ -231,7 +195,7 @@
                     <p>The Best for The Best</p>
                 </div>
             </div>
-        
+
             <div class="reminders">
                 <div class="header">
                     <h2>Reminders</h2>
@@ -239,7 +203,7 @@
                         notifications_none
                     </span>
                 </div>
-        
+
                 <div class="notification">
                     <div class="icon">
                         <span class="material-icons-sharp">
@@ -258,7 +222,7 @@
                         </span>
                     </div>
                 </div>
-        
+
                 <div class="notification deactive">
                     <div class="icon">
                         <span class="material-icons-sharp">
@@ -277,7 +241,7 @@
                         </span>
                     </div>
                 </div>
-        
+
                 <div class="notification add-reminder">
                     <div>
                         <span class="material-icons-sharp">
@@ -286,15 +250,15 @@
                         <h3>Add Reminder</h3>
                     </div>
                 </div>
-        
+
             </div>
-        
+
         </div>
-        
 
 
-    <script src="../../assets/scripts/report.js"></script>
-    
+        <script src="../../assets/scripts/group.js"></script>
+
+    </div>
 </body>
 
 </html>
